# graphics-framework

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  makefile
include/: arcball.h  arcball.hpp  camera.hpp  geometry.hpp  geometry_list.hpp  input_handler.hpp  input_router.hpp  render_environment.hpp  renderable.hpp  shader.hpp  viewport.hpp  viewport_grid.hpp  viewport_input.hpp  viewspace_input.hpp
include/GLFW/: glfw3native.h
include/graphics-framework/: arcball.hpp  camera.hpp  geometry.hpp  geometry_list.hpp  input_handler.hpp  input_router.hpp  renderable.hpp  shader.hpp  viewport.hpp  viewport_grid.hpp  window_handler.hpp
src/: arcball.cpp  camera.cpp  geometry.cpp  glfw-test.cpp  input_handler.cpp  input_router.cpp  main.cpp  render_environment.cpp  renderable.cpp  shader.cpp  viewport.cpp  viewport_grid.cpp  viewport_input.cpp  viewspace_input.cpp  window_handler.cpp
src/cameras/: camera_base.cpp
src/shaders/: basic.vertshader
